--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "LBDR",
-  "name": "Light Bootstrap Dashboard React by Creative Tim",
+  "name": "SBT Validator SaaS",
   "icons": [
     {
       "src": "favicon.ico",
